Add and style first container

--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
+    <div class="container1">
+        <div class="awesome">
+            <h1 class="awesome">This website is awesome</h1>
+            <p class="awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="awesome">Sign up</button>
+        </div>
+        <img src="#" class="awesome-img">
+    </div>
 </body>
 </html>
