Add and style information container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
             <p class="awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button class="awesome">Sign up</button>
         </div>
-        <img src="#" class="awesome-img">
+        <img src="#" class="awesome">
+    </div>
+    <div class="container2">
+        <h1 class="random">Some random information.</h1>
+        <div class="small-container">
+            <div>
+                <img src="#" class="random">
+                <p class="random">this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="#" class="random">
+                <p class="random">this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="#" class="random">
+                <p class="random">this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="#" class="random">
+                <p class="random">this is some subtext under an illustration or image</p>
+        </div>    
+        </div>
     </div>
 </body>
 </html>
