--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
         </div>    
         </div>
     </div>
+    <div class="container3">
+        <div class="small-container2">
+            <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="attribute">-Thor, God of Thunder</p>
+        </div>
+    </div>
 </body>
 </html>
